--- a/iscripts/iguana.config
+++ b/iscripts/iguana.config
@@ -13,16 +13,16 @@ DIR_IGUANA=/opt/iguana
 DATABASE_HOST_IGUANA=localhost
 DATABASE_IGUANA=iguana
 PORT_IGUANA=3306
-USER_IGUANA=root
-PASS_IGUANA=sejalivre
+USER_IGUANA=iguana
+PASS_IGUANA=iguana
 
 
 # SugarCRM Community Edition 
-DATABASE_SUGARCRM=ambientelivre48
-DATABASE_HOST_SUGARCRM=mysql41.ambientelivre.com.br
+DATABASE_SUGARCRM=sugarcrm
+DATABASE_HOST_SUGARCRM=localhost
 PORT_SUGARCRM=3306
-USER_SUGARCRM=ambientelivre48
-PASS_SUGARCRM=sejalivre
+USER_SUGARCRM=sugarcrm
+PASS_SUGARCRM=sugarcrm
 
 
 
