--- a/iscripts/iguana.config
+++ b/iscripts/iguana.config
@@ -13,16 +13,16 @@ DIR_IGUANA=/opt/iguana
 DATABASE_HOST_IGUANA=localhost
 DATABASE_IGUANA=iguana
 PORT_IGUANA=3306
-USER_IGUANA=iguana
-PASS_IGUANA=iguana
+USER_IGUANA=root
+PASS_IGUANA=sejalivre
 
 
 # SugarCRM Community Edition 
-DATABASE_SUGARCRM=sugarcrm
-DATABASE_HOST_SUGARCRM=localhost
+DATABASE_SUGARCRM=ambientelivre35
+DATABASE_HOST_SUGARCRM=187.45.196.210
 PORT_SUGARCRM=3306
-USER_SUGARCRM=sugarcrm
-PASS_SUGARCRM=sugarcrm
+USER_SUGARCRM=ambientelivre35
+PASS_SUGARCRM=mjv2725fisl
 
 
 
