--- a/iserver/lib/pentaho/biserver-ce/data/hsqldb/sampledata.properties
+++ b/iserver/lib/pentaho/biserver-ce/data/hsqldb/sampledata.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 1.8.0.5
-#Wed Aug 06 11:00:32 BRT 2014
+#Wed Jan 28 10:40:02 BRST 2015
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
